<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_marginBottom="5dp"
    android:background="#F8EEE1"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:fontFamily="@font/poppins"
        android:textColor="#202020"
        android:textSize="14sp"
        android:textStyle="bold"
        android:id="@+id/tgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:text="@string/tanggal" />
    <TextView
        android:fontFamily="@font/poppins"
        android:textColor="#202020"
        android:textSize="11sp"
        android:id="@+id/jam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tgl"
        android:layout_below="@+id/tgl"
        android:text="@string/jam" />
    <TextView
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="15dp"
        android:textColor="#202020"
        android:textSize="11sp"
        android:id="@+id/tipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/jam"
        android:layout_below="@+id/jam"
        android:text="@string/tipe" />
</RelativeLayout>


