<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/df_dialog_layout"
    android:id="@+id/dialogParent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/whiteCardColor"
        android:gravity="center"
        tools:targetApi="lollipop">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/nointernet"
                android:layout_gravity="center"
                android:contentDescription="@string/wifi" />
            <TextView
                android:fontFamily="@font/poppins"
                style="@style/homeHeading"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/headerTextSize"
                android:text="@string/no_internet"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
            <TextView
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:id="@+id/spinAndWinReward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/learnhubTitleText"
                android:textStyle="normal"
                android:textSize="14sp"
                android:text="@string/please_check_your_connection_status_and_try_again"/>
            <Button
                android:id="@+id/btnSpinAndWinRedeem"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:text="@string/close"
                android:layout_marginTop="30dp"
                android:textColor="@color/whiteTextColor"
                android:background="@drawable/btnlogin"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>