<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".About"
    android:id="@+id/dialogParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/udinus"
            android:contentDescription="@string/udinus" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contributor"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorBlack"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/poppins"
                        android:text="@string/septian_muhammad_adi"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:gravity="start" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:fontFamily="@font/poppins"
                        android:text="@string/a11_2017_10346"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:gravity="end" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/poppins"
                        android:text="@string/alif_ananda_wijapena_p"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:gravity="start" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:fontFamily="@font/poppins"
                        android:layout_alignParentEnd="true"
                        android:text="@string/a11_2017_10351"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:gravity="end" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:fontFamily="@font/poppins"
                        android:text="@string/nafik_akhsana_fajar"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:gravity="end" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:fontFamily="@font/poppins"
                        android:text="@string/a11_2017_10359"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:gravity="end" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/poppins"
                        android:text="@string/ardian_ferdy_firmansyah"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:text="@string/a11_2017_10363"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/poppins"
                        android:text="@string/andin_fairuz_khosyi"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="20dp"
                        android:gravity="start" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:text="@string/a11_2017_10370"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/poppins"
                    android:text="@string/lestari_khoirunnisa"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:gravity="start" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/a11_2017_10415"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>