<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/y"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/splashscreen"
            android:contentDescription="@string/splash_screen_image" />
        <com.example.presensifacegeofencing.customfonts.GoMytext
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/sistem_presensi_karyawan_menggunakan_metode_geofencing"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:fontFamily="@font/poppins"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#A8A6A8"
            android:id="@+id/spinAndWinReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/learnhubTitleText"
            android:textStyle="normal"
            android:textSize="10sp"
            android:text="@string/berbasis_mobile_android"/>
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/splashProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</LinearLayout>