<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogParent"
    style="@style/df_dialog_layout">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:gravity="center"
        app:cardBackgroundColor="@color/whiteCardColor"
        app:cardCornerRadius="16dp"
        tools:targetApi="lollipop">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/modem"
                android:contentDescription="@string/server_down" />
            <com.example.presensifacegeofencing.customfonts.GoMytext
                style="@style/homeHeading"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/server_down"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="@string/silahkan_kembali_lagi_nanti"
                android:textColor="@color/colorPrimary"
                android:textSize="9sp"
                android:textStyle="normal" />
            <Button
                android:id="@+id/btnSpinAndWinRedeem"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:background="@drawable/btnlogin"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/whiteTextColor"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>